Add libqca-qt5-2-plugins as a build dependency.
Needed by the tests.

--- a/debian/control
+++ b/debian/control
@@ -15,6 +15,7 @@ Build-Depends: cmake,
                libkf5kcmutils-dev,
                libkf5notifications-dev,
                libqca-qt5-2-dev,
+               libqca-qt5-2-plugins,
                libqt5x11extras5-dev,
                libxtst-dev,
                pkg-config,
